--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.1.4",
     "react-router-dom": "^6.7.0",
